    - po: update de.po (from translationproject.org)
    - docs: add note about http://translationproject.org
    - man-pages: cleanup of chrt.1 and taskset.1
    - mount: improve error message when helper program not present
  * drop arch.1 man page.  Closes: #438668
  * deliver the right file for scriptreplay.  Closes: #438771
  * sfdisk: Allow drives over 2^31 sectors in size.  Closes: #314413

 -- LaMont Jones <lamont@debian.org>  Sun, 19 Aug 2007 12:27:14 -0600

util-linux (2.13~rc3-5) unstable; urgency=low

  * Fix distro check in debian/rules
  * Use Breaks: on distros that support that in the previous release.

 -- LaMont Jones <lamont@debian.org>  Wed, 15 Aug 2007 00:32:12 -0600

util-linux (2.13~rc3-4) unstable; urgency=low

  * Changes from upstream:
    - po: gettextizing some overlooked messages.
    - build-sys: add --disable-makeinstall-chown
    - docs: add README.licensing
    - tests: fix ULONG_MAX usage on 32bit machines
    - chsh: don't use empty shell field in /etc/passwd
    - more: fix underlining for multibyte chars
    - login: replace /usr/spool/mail with /var/spool/main in man page
  * mount: make the error message a little more clear when a helper
    program is missing.  (LP #131367)
  * manpages: cleanup of chrt.1 and taskset.1.  Closes: #427267, #265479
  * hwclock.sh: only report hwclock updated if we did that.  Closes: #436873
  * update copyright to reflect README.licensing
  * Merge ubuntu changes, do the right thing at build time.
  * Go back to Depends: for the various packages, since the switch to libc5 is
    long, long over.

 -- LaMont Jones <lamont@debian.org>  Tue, 14 Aug 2007 14:01:11 -0600

util-linux (2.13~rc3-3) unstable; urgency=low

  * Merge lpia support from ubuntu.

 -- LaMont Jones <lamont@debian.org>  Thu,  9 Aug 2007 08:50:42 -0600

util-linux (2.13~rc3-2ubuntu2) gutsy; urgency=low

  * Add lpia support back in.  sorry.

 -- LaMont Jones <lamont@ubuntu.com>  Thu,  9 Aug 2007 08:48:21 -0600
