@@ -8,6 +8,7 @@ util-linux (2.13~rc3-6) unstable-UNRELEASED; urgency=low
   * drop arch.1 man page.  Closes: #438668
   * deliver the right file for scriptreplay.  Closes: #438771
   * sfdisk: Allow drives over 2^31 sectors in size.  Closes: #314413
+  * Deliver flock and flock.1.  Closes: #435272
 
  -- LaMont Jones <lamont@debian.org>  Sun, 19 Aug 2007 12:27:14 -0600
 
